tests/NormalTests/paczka1/fuzzy1/17321064.err
Error in line 1: XsChaE S890 4,5
Error in line 4: 3Ibmi S366 42,7
Error in line 6: XsChaE S224 47,0
Error in line 8: S61 S61 4,1
Error in line 18: XsChaE S61 64,2
Error in line 7: 34H5H S224 69,2
Error in line 25: sFrj6 S890 93,3
Error in line 28: 34H5H S366 88,9
